# lazy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  license.txt
include/: array_traits.cppm  assert.hpp  einsum.cppm  expression.cppm  invocable_traits.cppm  string_literal.cppm  utilities.cppm
tests/: CMakeLists.txt
tests/src/: test_array_traits.cpp  test_einsum.cpp  test_expression.cpp  test_string_literal.cpp
